--- a/client/src/app/dashboard-page/indexes/index-list/index-list.component.html
+++ b/client/src/app/dashboard-page/indexes/index-list/index-list.component.html
@@ -1,11 +1,11 @@
-<div class="mat-elevation-z1" style = "margin: 2vh;width:95%; height: 85vh; background-color: #fff; border-radius: 15px;">
+<div class="mat-elevation-z1 peaches" style = "margin: 2vh;width:95%; height: 85vh; background-color: #fff; border-radius: 15px;">
     <div class = "hhh">
         <div style="width: 45%; float: left;margin-left:2vh ; ">
             My indices 
             <mat-form-field style = "margin-left:4vh ;">
-                <mat-label>Actions</mat-label>
+                <mat-label>Bulk Actions</mat-label>
                 <mat-select>
-                  <mat-option value="Bulk">Bulk</mat-option>
+                  <mat-option value="Bulk">Reindex</mat-option>
                   <mat-option value="Delete">Delete</mat-option>
                 </mat-select>
             </mat-form-field>
@@ -14,9 +14,9 @@
             <button (click) = "onAddNew()" style="float: right;margin-right:2vh;"  mat-raised-button class = "mat-raised-button" >Add new</button>
         </div>
     </div>
-
-    <mat-table [dataSource] = "listData" matSort class = "table">
-
+    
+    <mat-table [dataSource] = "listData" matSort class = "table bananas">
+        
         <ng-container matColumnDef = "check" style = "margin: 0;" >
             <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header>Check</mat-header-cell>
             <mat-cell *matCellDef = "let element" class = "elements" >
@@ -37,6 +37,11 @@
         <ng-container matColumnDef = "size">
             <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header>Size</mat-header-cell>
             <mat-cell *matCellDef = "let element" class = "elements">{{element["store.size"]}}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef = "type">
+            <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header>Type</mat-header-cell>
+            <mat-cell *matCellDef = "let element" class = "elements">_doc</mat-cell>
         </ng-container>
         
         <ng-container matColumnDef = "quickActions" >
