--- a/client/src/app/rispage/rispage.component.css
+++ b/client/src/app/rispage/rispage.component.css
@@ -2,11 +2,25 @@ background{
     background-color: rgb(247, 250, 252);
 }
 
+.head{
+    font-size: 26px;
+    font-weight: bold;
+    color: #717174;
+    margin-bottom: 2vh;
+}
+
+.demo-inline-calendar-card {
+    width: 300px;
+}
+
 .header{
     background-color:#fff;
-    margin: 0;
+    margin: 0 0 1vh 0;
     padding: 2.5vh;
     width: 97%;
     color: rgb(136, 147, 161);
     font-size: 22px;
 }
+
+
+  
