--- a/client/src/app/page1/page1.component.html
+++ b/client/src/app/page1/page1.component.html
@@ -2,9 +2,9 @@
     <div class="sideBar">
         <img src="/assets/SunViewLogo.png" alt="SunViewLogo" class="svLogo">
         <div class="listItems">
-            <a routerLink = "/Dashboard" routerLinkActive = "selected" class="listItem">Dashboard</a>
-            <a routerLink = "/TroubleShootQueries" routerLinkActive = "selected" class="listItem">TroubleShoot Queries</a>
-            <a routerLink = "/ReindexScheduler" routerLinkActive = "selected" class="listItem">Re-index Scheduler</a>
+            <a routerLink = "/Dashboard" routerLinkActive = "selected" class="listItem">DASHBOARD</a>
+            <a routerLink = "/TroubleShootQueries" routerLinkActive = "selected" class="listItem">TROUBLESHOOT QUERIES</a>
+            <a routerLink = "/ReindexScheduler" routerLinkActive = "selected" class="listItem">REINDEX SCHEDULER</a>
         </div>
 
     </div>
