--- a/client/src/app/rispage/rispage.component.html
+++ b/client/src/app/rispage/rispage.component.html
@@ -1,4 +1,4 @@
-<div class="header">Re-index Scheduler</div>
+<div class="header">RE-INDEX SCHEDULER</div>
 
 <form [formGroup] = "service.form" class = "normalForm" (submit) = "onSubmit()">
     <div class="header">
