--- a/client/src/app/tsqpage/tsqpage.component.html
+++ b/client/src/app/tsqpage/tsqpage.component.html
@@ -1,4 +1,4 @@
-<div class="header">TroubleShoot Queries</div>
+<div class="header">TROUBLESHOOT QUERIES</div>
 
 <form [formGroup] = "tsqService.form" class = "normalForm" (submit) = "onSubmit()">
     <div class="controlContainer">
