--- a/client/src/app/dashboard-page/indexes/index-list/index-list.component.html
+++ b/client/src/app/dashboard-page/indexes/index-list/index-list.component.html
@@ -25,27 +25,27 @@
         </ng-container>
         
         <ng-container matColumnDef = "name"  >
-            <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header>Name</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header>NAME</mat-header-cell>
             <mat-cell *matCellDef = "let element" class = "elements">{{element.index}}</mat-cell>
         </ng-container>
         
         <ng-container matColumnDef = "numDocs">
-            <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header># of docs</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header># OF DOCS</mat-header-cell>
             <mat-cell *matCellDef = "let element" class = "elements">{{element["docs.count"]}}</mat-cell>
         </ng-container>
         
         <ng-container matColumnDef = "size">
-            <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header>Size</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header>SIZE</mat-header-cell>
             <mat-cell *matCellDef = "let element" class = "elements">{{element["store.size"]}}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef = "type">
-            <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header>Type</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef class = "header" mat-sort-header>TYPE</mat-header-cell>
             <mat-cell *matCellDef = "let element" class = "elements">_doc</mat-cell>
         </ng-container>
         
         <ng-container matColumnDef = "quickActions" >
-            <mat-header-cell *matHeaderCellDef class = "header">Quick actions</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef class = "header">QUICK ACTIONS</mat-header-cell>
             <mat-cell *matCellDef = "let row">
                 <a class = "quickActions"  (click) = "onReindex(row.index)">Reindex</a> 
                 <a (click) = onDelete(row.index) class = "quickActions">Delete</a>            
